Cabeçalho do Site

--- a/index.html
+++ b/index.html
@@ -27,6 +27,20 @@
 </head>
 
 <body>
+  <header class="cor-bg-1">
+    <div class="container header">
+      <a href=" ../">
+        <img src="img/bikcraft.svg" alt="Bikcraft" width="136" height="32">
+      </a>
+      <nav aria-label="primaria">
+        <ul class="header-menu font-1-m cor-0">
+          <li class="f""><a href=" #">Bicicletas</a></li>
+          <li><a href="#">Seguros</a></li>
+          <li><a href="#">Contato</a></li>
+        </ul>
+      </nav>
+    </div>
+  </header>
 
 </body>
 
