--- a/index.html
+++ b/index.html
@@ -42,6 +42,23 @@
     </div>
   </header>
 
+  <main class="introducao-bg">
+    <div class="introducao container">
+      <div class="introducao-conteudo">
+        <h1 class="cor-0 font-1-xxl">Bicicletas feitas sob medida<span class="cor-p1">.</span></h1>
+        <p class="cor-5 font-2-l">Bicicletas elétricas de alta precisão e qualidade, feitas sob medida para você.
+          Explore o mundo
+          na sua
+          velocidade com a Bikcraft.</p>
+        <a class="botao" href="#">Escolha a Sua</a>
+      </div>
+      <picture>
+        <source media="(max-width: 800px)" srcset="img/bicicletas/nimbus.jpg">
+        <img src="img/fotos/introducao.jpg" alt="Bicicleta preta com motor elétrico" width="640" height="800">
+      </picture>
+    </div>
+  </main>
+
 </body>
 
 </html>
