--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 
 </head>
 
-<body>
+<body id="home">
   <header class="cor-bg-1">
     <div class="container header">
       <a href=" ../">
@@ -58,6 +58,36 @@
       </picture>
     </div>
   </main>
+
+  <article class="bicicleta-lista">
+    <h2 class="container font-1-xxl">escolha a sua<span class="cor-p1">.</span></h2>
+    <ul>
+      <li>
+        <a href="#">
+          <img src="img/bicicletas/magic-home.jpg" alt="Bicicleta Preta" width="460" height="520">
+          <h3 class="font-1-xl">Magic Might</h3>
+          <span class="font-2-m cor-8">R$ 2499</span>
+        </a>
+      </li>
+      <li>
+        <a href="#">
+          <img src="img/bicicletas/nimbus-home.jpg" alt="Bicicleta Preta" width="460" height="520">
+          <h3 class="font-1-xl">Nimbus Stark</h3>
+          <span class="font-2-m cor-8">R$ 4999</span>
+        </a>
+      </li>
+      <li>
+        <a href="#">
+          <img src="img/bicicletas/nebula-home.jpg" alt="Bicicleta Branca" width="460" height="520">
+          <h3 class="font-1-xl">Nebula Cosmic</h3>
+          <span class="font-2-m cor-8">R$ 3999</span>
+        </a>
+      </li>
+    </ul>
+  </article>
+
+
+  <section class="margin-boton"></section>
 
 </body>
 
