--- a/index.html
+++ b/index.html
@@ -7,8 +7,7 @@
   <title>Bikcraft - Bicicletas Elétricas</title>
 
   <!-- descrição do site -->
-  <meta name="description"
-    content="Bicicletas elétricas de alta precisão e qualidade, feitas sob medida para você. Explore o mundo na sua velocidade com a Bikcraft.">
+  <meta name="description" content="Bicicletas elétricas de alta precisão e qualidade, feitas sob medida para você. Explore o mundo na sua velocidade com a Bikcraft.">
 
   <!-- favicon site -->
   <link rel="icon" href="img/favicon.svg" type="image/svg+xml">
@@ -20,9 +19,7 @@
   <!-- google fonts -->
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link
-    href="https://fonts.googleapis.com/css2?family=Merriweather:ital,wght@1,900&family=Poppins:wght@500;600&family=Roboto:wght@400;500&display=swap"
-    rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Merriweather:ital,wght@1,900&family=Poppins:wght@500;600&family=Roboto:wght@400;500&display=swap" rel="stylesheet">
 
 </head>
 
@@ -120,6 +117,20 @@
       </div>
     </div>
   </article>
+
+  <section class="parceiros" aria-label="Nossos Parceiros">
+    <h2 class="container font-1-xxl">nossos parceiros <span class="cor-p1">.</span></h2>
+    <ul>
+      <li><img src="img/parceiros/caravan.svg" alt="Caravan" width="140" height="38"></li>
+      <li><img src="img/parceiros/ranek.svg" alt="Renek" width="149" height="36"></li>
+      <li><img src="img/parceiros/handel.svg" alt="Handel" width="140" height="50"></li>
+      <li><img src="img/parceiros/dogs.svg" alt="Dogs" width="152" height="39"></li>
+      <li><img src="img/parceiros/lescone.svg" alt="Lescone" width="208" height="41"></li>
+      <li><img src="img/parceiros/flexblog.svg" alt="Flexblog" width="165" height="38"></li>
+      <li><img src="img/parceiros/wildbeast.svg" alt="Wildbeast" width="196" height="34"></li>
+      <li><img src="img/parceiros/surfbot.svg" alt="Surfbot" width="200" height="49"></li>
+    </ul>
+  </section>
 
   <section class="margin-boton"></section>
 
