Area de Depoimento

--- a/index.html
+++ b/index.html
@@ -132,6 +132,19 @@
     </ul>
   </section>
 
+  <section class="depoimento">
+    <div>
+      <img src="img/fotos/depoimento.jpg" alt="Pessoa pedalando uma bicicleta bickraft" width="780" height="680">
+    </div>
+    <div class="depoimento-conteudo">
+      <blockquote class="font-1-xl cor-p5">
+        <p>Pedalar sempre foi a minha paixão, o que o pessoal da Bikcraft fez foi intensificar o meu amor por esta
+          atividade. Recomendo à todos que amo.</p>
+      </blockquote>
+      <span class="font-1-m-b cor-p4">Ana Júlia</span>
+    </div>
+  </section>
+
   <section class="margin-boton"></section>
 
 </body>
