--- a/index.html
+++ b/index.html
@@ -175,7 +175,37 @@
     </div>
   </article>
 
-  <section class="margin-boton"></section>
+  <footer class="footer-bg">
+    <div class="footer container">
+      <img src="img/bikcraft.svg" alt="Bikcraft" width="136" height="32">
+      <div class="footer-contato">
+        <h3 class="font-2-l-b cor-0">Contato</h3>
+        <ul class="font-2-m cor-5">
+          <li>+55 21 9999-9999</li>
+          <li>contato@bikcraft.com</li>
+          <li>Rua Ali Perto, 42 - Botafogo</li>
+          <li>Rio de Janeiro - RJ</li>
+        </ul>
+        <div class="footer-redes">
+          <a href="#"><img src="img/redes/instagram.svg" alt="Instagram" width="32" height="32"></a>
+          <a href="#"><img src="img/redes/facebook.svg" alt="Facebook" width="32" height="32"></a>
+          <a href="#"><img src="img/redes/youtube.svg" alt="Youtube" width="32" height="32"></a>
+        </div>
+      </div>
+      <div class="footer-informacoes">
+        <h3 class="font-2-1-b cor-0">Informações</h3>
+        <nav>
+          <ul class="font-1-m cor-5">
+            <li><a href="#">Bicicletas</a></li>
+            <li><a href="#">Seguros</a></li>
+            <li><a href="#">Contato</a></li>
+            <li><a href="#">Termos e Condições</a></li>
+          </ul>
+        </nav>
+      </div>
+      <p class="font-2-m cor-6 footer-copy">Bickraft © Alguns direitos reservados.</p>
+    </div>
+  </footer>
 
 </body>
 
