--- a/index.html
+++ b/index.html
@@ -134,7 +134,7 @@
 
   <section class="depoimento">
     <div>
-      <img src="img/fotos/depoimento.jpg" alt="Pessoa pedalando uma bicicleta bickraft" width="780" height="680">
+      <img src="img/fotos/depoimento.jpg" alt="Pessoa pedalando uma bicicleta Bikcraft" width="780" height="680">
     </div>
     <div class="depoimento-conteudo">
       <blockquote class="font-1-xl cor-p5">
@@ -203,7 +203,7 @@
           </ul>
         </nav>
       </div>
-      <p class="font-2-m cor-6 footer-copy">Bickraft © Alguns direitos reservados.</p>
+      <p class="font-2-m cor-6 footer-copy">Bikcraft © Alguns direitos reservados.</p>
     </div>
   </footer>
 
