--- a/index.html
+++ b/index.html
@@ -31,9 +31,9 @@
       </a>
       <nav aria-label="primaria">
         <ul class="header-menu font-1-m cor-0">
-          <li class="f""><a href=" #">Bicicletas</a></li>
-          <li><a href="#">Seguros</a></li>
-          <li><a href="#">Contato</a></li>
+          <li><a href="bicicletas.html">Bicicletas</a></li>
+          <li><a href="seguros.html">Seguros</a></li>
+          <li><a href="contato.html">Contato</a></li>
         </ul>
       </nav>
     </div>
