Pagina de Seguros

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Bikcraft - Bicicletas Elétricas</title>
+  <title>GGC - Bikcraft - Bicicletas Elétricas</title>
 
   <!-- descrição do site -->
   <meta name="description" content="Bicicletas elétricas de alta precisão e qualidade, feitas sob medida para você. Explore o mundo na sua velocidade com a Bikcraft.">
@@ -47,7 +47,7 @@
           Explore o mundo
           na sua
           velocidade com a Bikcraft.</p>
-        <a class="botao" href="#">Escolha a Sua</a>
+        <a class="botao" href="bicicletas.html">Escolha a Sua</a>
       </div>
       <picture>
         <source media="(max-width: 800px)" srcset="img/bicicletas/nimbus.jpg">
