--- a/bicicletas.html
+++ b/bicicletas.html
@@ -118,10 +118,10 @@
         <h3 class="font-2-1-b cor-0">Informações</h3>
         <nav>
           <ul class="font-1-m cor-5">
-            <li><a href="#">Bicicletas</a></li>
-            <li><a href="#">Seguros</a></li>
-            <li><a href="#">Contato</a></li>
-            <li><a href="#">Termos e Condições</a></li>
+            <li><a href="../bicicletas.html">Bicicletas</a></li>
+            <li><a href="../seguros.html">Seguros</a></li>
+            <li><a href="../contato.html">Contato</a></li>
+            <li><a href="../termos.html">Termos e Condições</a></li>
           </ul>
         </nav>
       </div>
