--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
     <h2 class="container font-1-xxl">escolha a sua<span class="cor-p1">.</span></h2>
     <ul>
       <li>
-        <a href="#">
+        <a href="bicicletas/magic.html">
           <img src="img/bicicletas/magic-home.jpg" alt="Bicicleta Preta" width="460" height="520">
           <h3 class="font-1-xl">Magic Might</h3>
           <span class="font-2-m cor-8">R$ 2499</span>
@@ -196,10 +196,10 @@
         <h3 class="font-2-1-b cor-0">Informações</h3>
         <nav>
           <ul class="font-1-m cor-5">
-            <li><a href="#">Bicicletas</a></li>
-            <li><a href="#">Seguros</a></li>
-            <li><a href="#">Contato</a></li>
-            <li><a href="#">Termos e Condições</a></li>
+            <li><a href="../bicicletas.html">Bicicletas</a></li>
+            <li><a href="../seguros.html">Seguros</a></li>
+            <li><a href="../contato.html">Contato</a></li>
+            <li><a href="../termos.html">Termos e Condições</a></li>
           </ul>
         </nav>
       </div>
