--- a/bicicletas.html
+++ b/bicicletas.html
@@ -54,7 +54,7 @@
             <li><img src="img/icones/velocidade.svg" alt=""><span>50 km/h</span></li>
             <li><img src="img/icones/rastreador.svg" alt=""><span>Rastreador</span></li>
           </ul>
-          <a class="botao seta" href="#">Mais Sobre</a>
+          <a class="botao seta" href="bicicletas/nimbus.html">Mais Sobre</a>
         </div>
       </div>
     </div>
@@ -73,7 +73,7 @@
             <li><img src="img/icones/velocidade.svg" alt=""><span>45 km/h</span></li>
             <li><img src="img/icones/rastreador.svg" alt=""><span>Rastreador</span></li>
           </ul>
-          <a class="botao seta" href="#">Mais Sobre</a>
+          <a class="botao seta" href="bicicletas/magic.html">Mais Sobre</a>
         </div>
       </div>
     </div>
@@ -92,7 +92,7 @@
             <li><img src="img/icones/velocidade.svg" alt=""><span>40 km/h</span></li>
             <li><img src="img/icones/rastreador.svg" alt=""><span>Rastreador</span></li>
           </ul>
-          <a class="botao seta" href="#">Mais Sobre</a>
+          <a class="botao seta" href="bicicletas/nebula.html">Mais Sobre</a>
         </div>
       </div>
     </div>
