--- a/index.html
+++ b/index.html
@@ -67,14 +67,14 @@
         </a>
       </li>
       <li>
-        <a href="#">
+        <a href="bicicletas/nimbus.html">
           <img src="img/bicicletas/nimbus-home.jpg" alt="Bicicleta Preta" width="460" height="520">
           <h3 class="font-1-xl">Nimbus Stark</h3>
           <span class="font-2-m cor-8">R$ 4999</span>
         </a>
       </li>
       <li>
-        <a href="#">
+        <a href="bicicletas/nebula.html">
           <img src="img/bicicletas/nebula-home.jpg" alt="Bicicleta Branca" width="460" height="520">
           <h3 class="font-1-xl">Nebula Cosmic</h3>
           <span class="font-2-m cor-8">R$ 3999</span>
@@ -93,7 +93,7 @@
           Cada Bikcraft é única e possui a sua identidade. As medidas serão exatas para o seu corpo e altura, garantindo
           maior conforto e ergonomia na sua pedalada. Você pode também personalizar completamente as suas cores.
         </p>
-        <a class="link" href="#">Escolha um modelo</a>
+        <a class="link" href="bicicletas.html">Escolha um modelo</a>
         <div class="tecnologia-vantagens">
           <div>
             <img src="img/icones/eletrica.svg" alt="" width="24" height="24">
@@ -157,7 +157,7 @@
           <li>Suporte 08h às 18h</li>
           <li>Cobertura estadual</li>
         </ul>
-        <a class="botao secundario" href="#">Inscreva-se</a>
+        <a class="botao secundario" href="orcamento.html?tipo=seguro&produto=prata">Inscreva-se</a>
       </div>
       <div class="seguros-item">
         <h3 class="font-1-xl cor-p1">Ouro</h3>
@@ -170,7 +170,7 @@
           <li>Desconto em parceiros</li>
           <li>Acesso ao Clube Bikcraft</li>
         </ul>
-        <a class="botao" href="#">Inscreva-se</a>
+        <a class="botao" href="orcamento.html?tipo=seguro&produto=ouro">Inscreva-se</a>
       </div>
     </div>
   </article>
