--- a/bicicletas/magic.html
+++ b/bicicletas/magic.html
@@ -42,7 +42,7 @@
   <main class="bicicleta-bg">
     <div class="container bicicleta">
       <div class="bicicleta-titulo">
-        <span class="font-2-xl cor-5">R$ 4999</span>
+        <span class="font-2-xl cor-5">R$ 2499</span>
         <h1 class="font-1-xl cor-0">Magic Might<span class="cor-p1">.</span></h1>
       </div>
       <div class="bicicleta-imagens">
@@ -53,7 +53,7 @@
       <div class="bicicleta-conteudo">
         <p class="font-2-l cor-5">A Magic Might é a melhor Bikcraft já criada pela nossa equipe. Ela vem equipada com os melhores acessórios, o que garante maior velocidade.</p>
         <div class="bicicleta-comprar">
-          <a class="botao" href="#">Comprar Agora</a>
+          <a class="botao" href="../orcamento.html?tipo=bikcraft&produto=magic">Comprar Agora</a>
           <span class="font-1-xs cor-6">
             <img src="../img/icones/entrega.svg" alt="">
             entrega em 5 dias
