--- a/seguros.html
+++ b/seguros.html
@@ -56,7 +56,7 @@
           <li>Suporte 08h às 18h</li>
           <li>Cobertura estadual</li>
         </ul>
-        <a class="botao secundario" href="#">Inscreva-se</a>
+        <a class="botao secundario" href="orcamento.html?tipo=seguro&produto=prata">Inscreva-se</a>
       </div>
       <div class="seguros-item">
         <h3 class="font-1-xl cor-p1">Ouro</h3>
@@ -69,7 +69,7 @@
           <li>Desconto em parceiros</li>
           <li>Acesso ao Clube Bikcraft</li>
         </ul>
-        <a class="botao" href="#">Inscreva-se</a>
+        <a class="botao" href="orcamento.html?tipo=seguro&produto=ouro">Inscreva-se</a>
       </div>
     </div>
   </main>
@@ -143,6 +143,7 @@
 
 
   </article>
+  
   <footer class="footer-bg">
     <div class="footer container">
       <img src="img/bikcraft.svg" alt="Bikcraft" width="136" height="32">
